@@ -5,10 +5,8 @@
  */
 package org.elasticsearch.xpack.security.rest.action.user;
 
-import org.apache.logging.log4j.LogManager;
 import org.elasticsearch.client.node.NodeClient;
 import org.elasticsearch.common.Strings;
-import org.elasticsearch.common.logging.DeprecationLogger;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.license.XPackLicenseState;
@@ -23,7 +21,6 @@ import org.elasticsearch.xpack.core.security.user.User;
 import org.elasticsearch.xpack.security.rest.action.SecurityBaseRestHandler;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -33,8 +30,6 @@ import static org.elasticsearch.rest.RestRequest.Method.GET;
  * Rest action to retrieve a user from the security index
  */
 public class RestGetUsersAction extends SecurityBaseRestHandler {
-
-    private static final DeprecationLogger deprecationLogger = new DeprecationLogger(LogManager.getLogger(RestGetUsersAction.class));
 
     public RestGetUsersAction(Settings settings, XPackLicenseState licenseState) {
         super(settings, licenseState);
@@ -48,10 +43,10 @@ public class RestGetUsersAction extends SecurityBaseRestHandler {
     @Override
     public List<ReplacedRoute> replacedRoutes() {
         // TODO: remove deprecated endpoint in 8.0.0
-        return Collections.unmodifiableList(Arrays.asList(
-            new ReplacedRoute(GET, "/_security/user/", GET, "/_xpack/security/user/", deprecationLogger),
-            new ReplacedRoute(GET, "/_security/user/{username}", GET, "/_xpack/security/user/{username}", deprecationLogger)
-        ));
+        return List.of(
+            new ReplacedRoute(GET, "/_security/user/", GET, "/_xpack/security/user/"),
+            new ReplacedRoute(GET, "/_security/user/{username}", GET, "/_xpack/security/user/{username}")
+        );
     }
 
     @Override
